gap in index solved / season 4 done !

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body{
     max-width: 1920px;
     margin:auto;
     filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.8) );
+    position: relative;
 }
 
 body::-webkit-scrollbar{
@@ -200,16 +201,16 @@ section h2::before{
 
 /* ==================== */
 .bannermiddle{
+    margin-top: -25px;
     padding-top: 30px;
     width: 100%;
     height: 70vh;
     max-height: 800px;
-    background-image: url('./ressources/img/bannermidlle.jpg');
     background-image: url('./ressources/img/teste.jpg');
     background-size: cover;
     background-position-y: center;
     clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 80%);
-    transition : background-position-y 1s
+    transition : background-position-y 1s;
 }
 
 .bannermiddle:hover{
@@ -420,7 +421,6 @@ footer{
     background-color: #fff;
 }
 
-
 #episode_bloc{
     /* border:solid var(--darkorange) 1px; */
     max-width: 300px !important;
@@ -453,7 +453,7 @@ footer{
     background-color: #d77400;
 }
 
-#content_episode .content_saison button{
+#content_episode .content_saison li{
     display: block;
     color: #fff;
     padding: 3% 5%;
@@ -514,5 +514,15 @@ footer{
     height: 60vh;
 }
 
+/* =========================== */
 
-
+#stream_bgc{
+    background-image: url('./ressources/img/letusskate.jpg');
+    position: fixed;
+    width: 500px;
+    height: 500px;
+    top: 0;
+    right: 0;
+    background-size: cover;
+    border:solid red 3px;
+}
